--- a/examples/hello-world-example.html
+++ b/examples/hello-world-example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Cel Example</title>
+	<title>Hello World | Cel</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<script
 		src="https://code.jquery.com/jquery-3.1.1.min.js"
