--- a/examples/service-component.html
+++ b/examples/service-component.html
@@ -48,15 +48,18 @@ APP.controllers.widget = Cel({
 	],
 	methods: {
 		fetchData: function() {
-			this.setState( 'users', APP.services.users.getUsers() );
-			this.methods.updateUIList()
+			this.setStateAsync(
+				'users', // a property in 'this.state' as string
+				APP.services.users.getUsers, // async task, gets wrapped in a Promise
+				this.methods.updateUIList // async callback
+			);
 		},
-		updateUIList: function() {
-			this.setHtml('list', this.state.users)
+		updateUIList: function( data ) {
+			this.setHtml( 'list', data );
 		}
 	},
 	handlers: {
-		buttonClick: function(e) {
+		buttonClick: function( e ) {
 			this.methods.fetchData();
 		}
 	},
@@ -79,35 +82,27 @@ APP.services.users = Cel({
 		users: []
 	},
 	methods: {
-		ajaxCall: function(url, callback) {
-			var xmlhttp;
-			xmlhttp = new XMLHttpRequest();
-			xmlhttp.onreadystatechange = function() {
-				if (
-					xmlhttp.readyState == 4 &&
-					xmlhttp.status == 200
-				) {
-					callback(xmlhttp.responseText);
-				}
-			}
-			xmlhttp.open("GET", url, true);
-			xmlhttp.send();
-		},
-		fetchGithubUsers: function() {
-			this.methods.ajaxCall(
-				this._.GH_USERS_API_ENDPOINT,
-				this.methods.setUsers
-			);
-		},
-		setUsers: function( newUsers ) {
-			this.setState( 'users', newUsers );
-		},
-		getUsers: function() {
+		// 'getUsers' is used in 'setStateAsync', that wraps this one in a Promise.
+		// Async tasks require two params, 'onSuccess' and 'onFail'.
+		getUsers: function(onSuccess, onFail) {
 			if ( this.state.users.length < 1 ) {
-				this.methods.fetchGithubUsers();
+
+				this.fetch( // an in-house ajax GET request.
+					this._.GH_USERS_API_ENDPOINT, // url endpoint
+					this.methods.setUsers( onSuccess ), // on fetch success callback
+					onFail // on fetch error callback
+				);
+
 			} else {
 				return this.state.users;
 			}
+		},
+		setUsers: function( newUsers ) {
+			this.setState( 'users', newUsers );
+			return this.state.users; // returns
+		},
+		report: function( data ) {
+			console.log( data );
 		}
 	},
 	exposed: [ 'getUsers' ]
